--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -17,17 +17,17 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-                <WebView
-                    android:id="@+id/playerWebView"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/video_player_height"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginTop="0dp"
-                    android:padding="@dimen/activity_vertical_margin" />
+            <WebView
+                android:id="@+id/playerWebView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/video_player_height"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="0dp"
+                android:padding="@dimen/activity_vertical_margin" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -35,17 +35,7 @@
                 android:layout_margin="@dimen/activity_vertical_margin">
 
                 <TextView
-                    android:id="@+id/textViewTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:paddingBottom="@dimen/activity_vertical_margin"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
-                    android:paddingTop="@dimen/activity_vertical_margin" />
-
-                <TextView
-                    android:id="@+id/textViewQmeryDirect"
+                    android:id="@+id/viewTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
