--- a/app/src/main/res/layout/activity_cafe_single.xml
+++ b/app/src/main/res/layout/activity_cafe_single.xml
@@ -129,7 +129,11 @@
             <TextView
                 android:id="@+id/summary"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:lineSpacingExtra="12sp"
+                android:textColor="@color/textColor"
+                android:padding="@dimen/activity_vertical_margin"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/listTitle2"
@@ -191,7 +195,12 @@
             <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:lineSpacingExtra="12sp"
+                android:textColor="@color/textColor"
+                android:padding="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
