--- a/app/src/main/res/layout/list_row_cafe_attributes.xml
+++ b/app/src/main/res/layout/list_row_cafe_attributes.xml
@@ -2,7 +2,7 @@
     android:id="@+id/rowTextView"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textColor="#000"
+    android:textColor="@color/textColor"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:textSize="16sp" >
