--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="colorBrown50">#efebe9</color>
     <color name="colorBrown100">#d7ccc8</color>
+    <color name="textColor">#000</color>
 
     <color name="white">#ffffff</color>
     <color name="background_material_light">#efebe9</color>
