--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -45,6 +45,12 @@
                     android:paddingTop="@dimen/activity_vertical_margin" />
             </android.support.v7.widget.CardView>
 
+            <ListView
+                android:id="@+id/videoRelatedlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+ />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
