--- a/app/src/main/res/layout/activity_cafe_single.xml
+++ b/app/src/main/res/layout/activity_cafe_single.xml
@@ -193,6 +193,25 @@
                 android:paddingRight="@dimen/activity_vertical_margin"></ListView>
 
             <TextView
+                android:id="@+id/listTitle5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:lineSpacingExtra="12sp"
+                android:padding="@dimen/activity_vertical_margin"
+                android:text="@string/listTitle5"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp" />
+
+            <ListView
+                android:id="@+id/listView5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:paddingLeft="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/activity_vertical_margin"></ListView>
+
+            <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
