--- a/app/src/main/res/layout/activity_cafe_single.xml
+++ b/app/src/main/res/layout/activity_cafe_single.xml
@@ -116,7 +116,7 @@
                 android:paddingRight="@dimen/activity_vertical_margin"></ListView>
 
             <Button
-                android:id="@+id/button_send"
+                android:id="@+id/button_map"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_vertical_margin"
