--- a/app/src/main/res/drawable/background_search.xml
+++ b/app/src/main/res/drawable/background_search.xml
@@ -7,7 +7,7 @@
         android:top="0dp"
         android:bottom="15dp">
         <shape android:shape="rectangle">
-            <solid android:color="#dcffffff"/>
+            <solid android:color="@color/colorPrimary"/>
             <corners android:radius="2dp" />
         </shape>
     </item>
