--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,15 @@
                         android:text="@string/backdrop_title"
                         android:textStyle="bold" />
 
+                    <TextView
+                        android:id="@+id/viewTitle2"
+                        style="?android:attr/textAppearanceLarge"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:text="@string/backdrop_title"
+                        android:textStyle="bold" />
+
                 </LinearLayout>
 
             </FrameLayout>
@@ -108,27 +117,16 @@
                 android:padding="@dimen/cast_expanded_controller_control_button_margin"
                 android:text="@string/backdrop_search"
                 android:textAlignment="center"
-                android:textColor="#8f8f8f" />
-
-            <android.support.constraint.ConstraintLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                tools:context="com.faragostaresh.orod.MainActivity">
+                android:textColor="@color/white" />
 
                 <GridView
                     android:id="@+id/gridview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="400dp"
                     android:verticalSpacing="5dp"
                     android:horizontalSpacing="5dp"
                     android:stretchMode="columnWidth"
                     android:numColumns="3"/>
-
-            </android.support.constraint.ConstraintLayout>
 
         </LinearLayout>
 
