--- a/app/src/main/res/drawable/background_search.xml
+++ b/app/src/main/res/drawable/background_search.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:left="50dp"
-        android:right="50dp"
-        android:top="0dp"
-        android:bottom="15dp">
+        android:left="0dp"
+        android:right="0dp"
+        android:top="10dp"
+        android:bottom="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="#dcffffff"/>
             <corners android:radius="2dp" />
         </shape>
     </item>
