--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,39 +86,55 @@
         android:id="@+id/movie_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/search"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentStart="true"
-                android:background="@drawable/background_search"
-                android:gravity="center_vertical"
-                android:includeFontPadding="true"
-                android:padding="@dimen/cast_expanded_controller_control_button_margin"
-                android:text="@string/backdrop_search"
-                android:textAlignment="center"
-                android:textColor="@color/white" />
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background_search"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="true"
+                    android:padding="@dimen/cast_expanded_controller_control_button_margin"
+                    android:text="@string/backdrop_search"
+                    android:textAlignment="center"
+                    android:textColor="#8f8f8f" />
 
                 <GridView
                     android:id="@+id/gridview"
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
-                    android:verticalSpacing="5dp"
                     android:horizontalSpacing="5dp"
+                    android:numColumns="3"
                     android:stretchMode="columnWidth"
-                    android:numColumns="3"/>
+                    android:verticalSpacing="5dp" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:background="@color/white"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/my_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none" />
+
+            </LinearLayout>
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
